--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,10 @@ name = "pypi"
 
 [packages]
 
-flask = "*"
+Flask = "*"
 requests = "*"
-flask-pymongo = "*"
+Flask-PyMongo = "*"
 gunicorn = "*"
-paramiko = "*"
 
 
 [dev-packages]
